# bandnames.cool

./: .gitignore  Procfile  README.md  ads.txt  bandalytics_SQL  deploy.sh  dump.rdb  env.sh  env_script  manage.py  pyproject.toml  requirements.txt  set_env_vars.sh
Bandnames/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Bandnames/jQuery/: jquery.blockUI.js
Bandnames/migrations/: 0001_initial.py
Bandnames/templates/: index.html
BandnamesWebsite/: __init__.py  asgi.py  bn-submission.js  celery.py  settings.py  urls.py  wsgi.py
MongoDB_CSV/: accounts_profile.csv  auth_permission.csv  auth_user.csv  bnSubmission_bandname.csv  django_content_type.csv  django_session.csv
UI/: button.pixil
UI/button/: button-clicked.pixil  button.pixil  post-button-clicked.pixil  post-button.pixil
accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_cumulative_score_profile_righteousness_level.py  (+11 more)
bnSubmission/: .readInBandnames.py.un~  .utils.py.un~  .views.py.un~  apps.py  form_functions.py  forms.py  models.py  readInBandnames.py  readInBandnames.py~  urls.py  utils.py  utils.py~  views.py  views.py~
docs/: adding_bandalytics.md
main/: .utils.py.un~  admin.py  form_functions.py  forms.py  logger.py  main_tour.py  models.py  tasks.py  tests.py  urls.py  utils.py  utils.py~  views.py
scripts/: collect_static.sh  dev_tests.sh  migrate.sh  production_run.sh  run.sh  test.sh
sequencer/: urls.py  views.py
staticfiles/: staticfiles.json
templates/: 404.html  500.html
(+645 files in other folders)
