[tool.poetry]
name = "bandnames-cool"
version = "0.1.0"
description = ""
authors = ["collinjones <cojo2657@colorado.edu>"]
readme = "README.md"
packages = [{include = "bandnames"}]

[tool.poetry.dependencies]
python = "^3.10"
django-unfold = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
